src/test/ui/duplicate/dupe-symbols-1.stderr
error: symbol `fail` is already defined
  --> $DIR/dupe-symbols-1.rs:10:1
   |
LL | / pub fn b() {
LL | | //~^ symbol `fail` is already defined
LL | | }
   | |_^

error: aborting due to previous error

